# CPyMO

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakeSettings.json  CPyMO HD.md  README.md  Song of PyMO.mscz  convert-audio-to-ogg.ps1  ffmpeg-config.sh  libpymo.ykm  mo2pymo.ps1  pymo-convert-audio-to-ogg.ps1  pymo-convert-audio.ps1  pymo-convert.ps1  pymo-converter.ps1  pymo-strip.ps1  pymo2ykm.ps1
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_1.md  ISSUE_TEMPLATE_2.md  config.yml
.github/workflows/: ci.yml  cmake.yml
cpymo/: CMakeLists.txt  cpymo_album.c  cpymo_album.h  cpymo_anime.c  cpymo_anime.h  cpymo_assetloader.c  cpymo_assetloader.h  cpymo_audio.c  cpymo_audio.h  cpymo_backlog.c  cpymo_backlog.h  cpymo_bg.c  cpymo_bg.h  cpymo_charas.c  cpymo_charas.h  cpymo_color.c  cpymo_color.h  cpymo_config_ui.c  cpymo_config_ui.h  cpymo_engine.c  cpymo_engine.h  cpymo_error.c  cpymo_error.h  cpymo_fade.c  cpymo_fade.h  cpymo_flash.c  cpymo_flash.h  cpymo_floating_hint.c  cpymo_floating_hint.h  cpymo_game_selector.c  cpymo_game_selector.h  cpymo_gameconfig.c  cpymo_gameconfig.h  cpymo_hash_flags.c  cpymo_hash_flags.h  cpymo_interpreter.c  cpymo_interpreter.h  cpymo_key_hold.h  cpymo_key_pulse.h  cpymo_list_ui.c  (+58 more)
cpymo-backends/3ds/: .gitignore  Makefile  banner  build-3ds-ffmpeg.sh  cpymo.rsf  cpymo_backend_audio.c  cpymo_backend_image.c  cpymo_backend_input.c  cpymo_backend_masktrans.c  cpymo_backend_movie.c  cpymo_backend_save.c  cpymo_backend_text.c  ffmpeg-configure-3ds  icon  install-3ds-ffmpeg.sh  main.c  makefile  select_game.c  select_game.h  utils.h
cpymo-backends/3ds/romfs/: font.bcfnt
cpymo-backends/android/: .gitignore  build-android-ffmpeg.sh  gradle.properties  local.properties  settings.gradle
cpymo-backends/android/app/: build.gradle  keystore.jks
cpymo-backends/android/app/src/main/: AndroidManifest.xml
cpymo-backends/android/app/src/main/cpp/: CMakeLists.txt  cpymo_android.c  visual_helper.c
cpymo-backends/android/app/src/main/cpp/include/: cpymo_android.h
cpymo-backends/android/app/src/main/java/org/libsdl/app/: SDLActivity.java
cpymo-backends/android/app/src/main/java/xyz/xydm/cpymo/: Config.java  VisualHelper.java
cpymo-backends/android/app/src/main/java/xyz/xydm/cpymo/gesture/: GestureDetector.java  OnGestureListener.java  SlideDetector.java
cpymo-backends/android/app/src/main/res/values/: strings.xml  themes.xml
cpymo-backends/android/app/src/main/res/values-night/: themes.xml
cpymo-backends/android/app/src/main/res/values-zh-rCN/: strings.xml
cpymo-backends/android/gradle/wrapper/: gradle-wrapper.properties
cpymo-backends/ascii-art/: .gitignore  Makefile  cpymo  cpymo_backend_ascii.c  cpymo_backend_font.c  cpymo_backend_image.c  cpymo_backend_input.c  cpymo_backend_text.c  cpymo_backend_utils.c  main.c
cpymo-backends/include/: cpymo_backend_audio.h  cpymo_backend_image.h  cpymo_backend_input.h  cpymo_backend_masktrans.h  cpymo_backend_movie.h  cpymo_backend_save.h  cpymo_backend_text.h
cpymo-backends/ios/: CMakeLists.txt  build.sh  cpymo_ios.m
cpymo-backends/ios/Packaging/: AppIcon.icns
cpymo-backends/libretro/: CMakeLists.txt  cpymo_libretro.info  libretro.c
cpymo-backends/sdl1/: .gitignore  Makefile  Makefile.GameCube  Makefile.PSP  Makefile.Wii  cpymo_backend_audio.c  cpymo_backend_audio_sdl_mixer.c  cpymo_backend_font.c  cpymo_backend_image.c  cpymo_backend_input.c  cpymo_backend_movie.c  cpymo_backend_save.c  cpymo_backend_text.c  cpymo_backend_text_sdl_ttf.c  main.c  wii-meta.xml
cpymo-backends/sdl2/: .gitignore  CMakeLists.txt  Makefile  Makefile.Emscripten  Makefile.PSP  Makefile.PSV  Makefile.Switch  Makefile.WiiU  Makefile.Win32  build-emscripten-ffmpeg.sh  build-psp-ffmpeg.sh  build-psv-ffmpeg.sh  build-psv.sh  build-wasm-ffmpeg.sh  cpymo_backend_audio.c  cpymo_backend_audio_sdl2_mixer.c  cpymo_backend_font.c  cpymo_backend_image.c  cpymo_backend_input.c  cpymo_backend_masktrans.c  cpymo_backend_movie.c  cpymo_backend_save.c  cpymo_backend_text.c  cpymo_backend_text_sdl2_ttf.c  cpymo_import_sdl2.h  install-psv-ffmpeg.sh  main.c  posix_win32.h  psp-snd0.at3  psv-template.xml  pymo-icon-windows.rc
cpymo-backends/software/: cpymo_backend_image.c  cpymo_backend_image_software.c  cpymo_backend_masktrans.c  cpymo_backend_software.c  cpymo_backend_software.h  cpymo_backend_text.c
cpymo-backends/switch/: .gitignore  Makefile
cpymo-backends/text/: .gitignore  Makefile  main.c
cpymo-backends/uwp/: .gitignore  CPyMO.sln  CPyMO.vcxproj  CPyMO.vcxproj.filters  CPyMO_TemporaryKey.pfx  Check-Certificate.ps1  Diagnose-Certificate.ps1  New-Cert.ps1  Package.appxmanifest  SDL-UWP.vcxproj  Update-Certificate-README.txt  Update-Certificate.ps1  Verify-Certificate-CI.ps1  cert.pfx  cpymo_backend_uwp.cpp  packages.config  update-certificate.bat
cpymo-tool/: .gitignore  CMakeLists.txt  Makefile  Makefile.Win32  cpymo_tool_asset_analyzer.c  cpymo_tool_asset_analyzer.h  cpymo_tool_asset_filter.c  cpymo_tool_asset_filter.h  cpymo_tool_convert.c  cpymo_tool_ffmpeg.c  cpymo_tool_ffmpeg.h  cpymo_tool_gameconfig.c  cpymo_tool_gameconfig.h  cpymo_tool_image.c  cpymo_tool_image.h  cpymo_tool_pack_images.c  cpymo_tool_pack_images.h  cpymo_tool_pack_spritesheet.c  cpymo_tool_package.c  cpymo_tool_package.h  cpymo_tool_prelude.h  cpymo_tool_resize.c  cpymo_tool_resize.h  cpymo_tool_strip.c  main.c  package.c  package.h
makefiles/3ds/: makefile
